# Otedama

./: .dockerignore  .env.example  .env.mining  .env.production  .env.production.example  .env.template  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .golangci.yml  .npmignore  .prettierignore  .prettierrc  API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG-v1.1.5.md  CHANGELOG.ja.md  CHANGELOG.md  CHANGELOG_AR.md  CHANGELOG_CN.md  CHANGELOG_DE.md  CHANGELOG_ES.md  CHANGELOG_FR.md  CHANGELOG_HI.md  CHANGELOG_IT.md  CHANGELOG_JP.md  CHANGELOG_KR.md  CHANGELOG_NL.md  CHANGELOG_PL.md  CHANGELOG_PT.md  CHANGELOG_RU.md  CHANGELOG_TH.md  CHANGELOG_TR.md  CHANGELOG_VI.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE_v1.1.5.txt  (+235 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit
.secrets/: secrets.enc
.well-known/: security.txt
_backup_unused_modules/: enhanced_security.go  main_old.go  nextgen_mining_engine.go
_deleted_backup/: asic_enterprise_duplicate.go  asic_implementation_old.go  config_dashboard_duplicate.go  fips140_security.go  gpu_implementation_old.go
agents/: test-specialist.md
alertmanager/: config.yml
analytics/: README.md  export_to_bigquery.sh  generate_insights_report.js  user_behavior_analysis.sql
p2pool-core/: Cargo.toml  config.json
p2pool-core/src/: config.rs  consensus.rs  crypto.rs  error.rs  lib.rs  main.rs  metrics.rs  mining.rs  network.rs  storage.rs  types.rs
p2pool-core/tests/: integration_tests.rs
(+2860 files in other folders)
