[package]
name = "p2pool-core"
version = "0.1.0"
edition = "2021"
authors = ["Otedama Team"]
description = "P2P Distributed Mining Pool - Core Library"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# P2P Networking
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "ping",
    "identify",
    "macros"
]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
protobuf = "3.2"

# Cryptography
sha2 = "0.10"
ring = "0.17"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# Database
rocksdb = "0.21"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
test-log = "0.2"
tempfile = "3.0"

[[bin]]
name = "p2pool"
path = "src/main.rs"

[lib]
name = "p2pool_core"
path = "src/lib.rs"
